--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,12 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nice_nano
+    shield: a_dux_left
+  - board: nice_nano
+    shield: a_dux_right
+  - board: nice_nano_v2
+    shield: skeletyl_left
+  - board: nice_nano_v2
+    shield: skeletyl_right
