Add Skeletyl keyboard configuration and documentation
- Introduced Kconfig files for left and right shields.
- Added device tree source and overlay files for Skeletyl.
- Created keymap configuration for Skeletyl with Miryoku layout.
- Updated pinout documentation for Pro Micro and nice!nano v2.
- Added schematic image for visual reference.

--- a/config/west.yml
+++ b/config/west.yml
@@ -10,9 +10,8 @@ manifest:
   - name: zmk
     remote: zmkfirmware
     import: app/west.yml
-  - name: zmk-config-handwired-skeletyl
-    url: https://github.com/cyanindya/zmk-config-handwired-skeletyl
-    revision: master
-    path: modules/zmk-config-handwired-skeletyl
-  self:
-    path: config
+# Local shield definition - moved to boards/shields/skeletyl/
+#  - name: zmk-config-handwired-skeletyl
+#    url: https://github.com/cyanindya/zmk-config-handwired-skeletyl
+#    revision: master
+#    path: modules/zmk-config-handwired-skeletyl
