--- a/boards/shields/skeletyl/skeletyl.dtsi
+++ b/boards/shields/skeletyl/skeletyl.dtsi
@@ -22,6 +22,15 @@ RC(2,0) RC(2,1) RC(2,2)                         RC(2,3) RC(2,4)
         >;
     };
 
+    physical_layouts {
+        compatible = "zmk,physical-layout";
+        layout_0 {
+            compatible = "zmk,physical-layout-key-bounce";
+            columns = <5>;
+            rows = <4>;
+        };
+    };
+
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row"; // use row2col if using amoeba pcb
