fix: Add missing display-name property to physical layout
The 'display-name' property is required in the zmk,physical-layout
binding. Added to match other ZMK shield configurations like a_dux.

Fixes build error: 'display-name' is marked as required but does not appear

--- a/boards/shields/skeletyl/skeletyl.dtsi
+++ b/boards/shields/skeletyl/skeletyl.dtsi
@@ -26,6 +26,7 @@ RC(2,0) RC(2,1) RC(2,2)                         RC(2,3) RC(2,4)
         compatible = "zmk,physical-layout";
         layout_0 {
             compatible = "zmk,physical-layout-key-bounce";
+            display-name = "Default";
             columns = <5>;
             rows = <4>;
         };
