fix: Correct physical layout configuration
The physical layout was incorrectly configured using 'physical_layouts'
container with 'layout_0' label. Changed to follow standard ZMK pattern
like kyria and a_dux shields:

Before:
  physical_layouts {
      layout_0 {
          compatible = zmk,physical-layout-key-bounce;
          display-name = Default;
          columns = <5>;
          rows = <4>;
      };
  };

After:
  skeletyl_layout: skeletyl_layout {
      compatible = zmk,physical-layout;
      display-name = Skeletyl;
      transform = <&default_transform>;
      kscan = <&kscan0>;
  };

Also added zmk,physical-layout reference in chosen node.
This matches the ZMK binding requirements and standard shield patterns.

--- a/boards/shields/skeletyl/skeletyl.dtsi
+++ b/boards/shields/skeletyl/skeletyl.dtsi
@@ -4,6 +4,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &skeletyl_layout;
     };
 
     default_transform: keymap_transform_0 {
@@ -22,14 +23,11 @@ RC(2,0) RC(2,1) RC(2,2)                         RC(2,3) RC(2,4)
         >;
     };
 
-    physical_layouts {
+    skeletyl_layout: skeletyl_layout {
         compatible = "zmk,physical-layout";
-        layout_0 {
-            compatible = "zmk,physical-layout-key-bounce";
-            display-name = "Default";
-            columns = <5>;
-            rows = <4>;
-        };
+        display-name = "Skeletyl";
+        transform = <&default_transform>;
+        kscan = <&kscan0>;
     };
 
     kscan0: kscan {
